Meta files and trivial fixes.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" colors="true" bootstrap="tests/bootstrap.php">
+	<php>
+		<!--
+		<const name="TEST_LIBMECAB_PATH" value="/usr/lib64/libmecab.so.2"/>
+		-->
+	</php>
 	<coverage>
 		<include>
 			<directory suffix=".php">src</directory>
@@ -8,6 +13,7 @@
 	<testsuites>
 		<testsuite name="Ranvis\MeCab">
 			<directory>tests</directory>
+			<exclude>tests/Test</exclude>
 		</testsuite>
 	</testsuites>
 </phpunit>
